[package]
name = "rocket_sample_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8.*" }
mongodb = { version = "2.3.*" }
rocket_sample_data = { path = "../rocket_sample_data" }

[dev-dependencies]
mockall = "0.11.*"
